# meeting-ai

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml
apps/desktop/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/plans/reports/: code-reviewer-260718-1514-sprint-1-stabilize-report.md  code-reviewer-260718-1603-sprint-2-quality-dead-code-report.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/audio/: import.rs  mod.rs  recorder.rs
apps/desktop/src-tauri/src/db/: meetings.rs  migrations.rs  mod.rs  models.rs  search.rs  segments.rs  settings.rs  summaries.rs
docs/: code-standards.md  design-guidelines.md  logo.error.txt  project-overview-pdr.md
docs/journals/: 2026-07-17-mvp-build-outcome-scope-gaps.md  2026-07-17-mvp-build-sendstream-wav-merge.md  2026-07-17-mvp-build-vite-rolldown-externalization.md  2026-07-18-sprint-1-stabilize.md  2026-07-18-sprint-2-quality-dead-code.md
docs/wireframes/: meeting-list.html  recording.html  settings.html  transcript-editor.html
plans/260717-1405-meeting-ai-mvp/: phase-01-project-scaffolding.md  phase-02-rust-backend-database.md  phase-03-audio-recording-import.md  phase-04-speech-to-text-integration.md  phase-05-ai-summary-llm-integration.md  phase-06-frontend-ui-core.md  phase-07-frontend-ui-recording-transcript.md  phase-08-export-polish.md  plan.md  (+1 more)
(+41 files in other folders)
