[package]
name = "meeting-ai"
version = "0.1.0"
edition = "2021"
description = "Privacy-first desktop meeting transcription app"

[lib]
name = "meeting_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
hound = "3.5"
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1"
uuid = { version = "1", features = ["v4"] }

